More context menu rename progress
